# AugmentedDancePad

./: .gitignore  CMakeLists.txt  README.md  calibration_result_my.txt  dance.cpp  helper.h  init.h  patterns.txt
music/jmww/: pattern.txt
