cmake_minimum_required( VERSION 3.0 )
set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
PROJECT( dance )
FIND_PACKAGE( OpenCV )
FIND_PACKAGE( OpenGL )
FIND_PACKAGE( GLU )
FIND_PACKAGE( GLUT )
SET(MySources dance.cpp)
ADD_EXECUTABLE( dance ${MySources} )
TARGET_LINK_LIBRARIES( dance ${OpenCV_LIBS} ${OpenGL_LIBRARY} ${GLU_LIBRARY} ${GLUT_LIBRARY})
